syntax = "proto3";

package gopherchatter.v0;
option go_package = "gopherchatterv0";

message AuthenticateRequest {
  string username = 1;
  string password = 2;
}

message AuthenticateResponse {
  string token = 1;
  int64 expires_at = 2;
}

message CreateUserRequest {
  string name = 1;
  string password = 2;
  string password_confirm = 3;
}

message CreateUserResponse {
  string id = 1;
  string name = 2;
  string password_hash = 3;
}

message CreateGroupChatRequest {
  string name = 1;
}

message CreateGroupChatResponse {
  string id = 1;
  string name = 2;
  string admin = 3;
  repeated string members = 4;
}

service GopherChatter {
  rpc Authenticate(AuthenticateRequest) returns (AuthenticateResponse);
  rpc CreateUser(CreateUserRequest) returns (CreateUserResponse);
  rpc CreateGroupChat(CreateGroupChatRequest) returns (CreateGroupChatResponse);
}