syntax = "proto3";

package gopherchatter.v0;
option go_package = "gopherchatterv0";
import "google/protobuf/empty.proto";

// message Message {
//     string message_id = 1;
//     string chat_id = 2;
//     string author_id = 3;
//     string content = 4;
// }

// message Friend {
//     string user_id = 1;
//     string user_name = 2;
// }

message AuthenticateRequest {
  string username = 1;
  string password = 2;
}

message AuthenticateResponse {
  string user_id = 1;
  string username = 2;
  string token = 3;
}

message CreateUserRequest {
  string username = 1;
  string password = 2;
}

// message DeleteUserRequest {
//     string user_id = 1;
// }

// message CreateIndividualChatRequest {
//     string creator_id = 1;
//     string with_user_id = 2;
// }

// message CreateIndividualChatResponse {
//     string chat_id = 1;
//     string creator_id = 2;
//     string with_user_id = 3;
// }

// message LeaveIndividualChatRequest {
//     string chat_id = 1;
// }

// message GetIndividualChatsRequest {
//     string user_id = 1;
// }

// message GetIndividualChatsResponse {
//     string user_id = 1;
//     repeated string chat_ids = 2;
// }

message CreateGroupChatRequest {
  string chat_name = 1;
  string creator_id = 2;
}

message CreateGroupChatResponse {
  string chat_id = 1;
  string chat_name = 2;
  string creator_id = 3;
}

  // message LeaveGroupChatRequest {
  //     string chat_id = 1;
  // }

  // message DeleteGroupChatRequest {
  //     string chat_id = 1;
  // }

  // message GetGroupChatsRequest {
  //     string user_id = 1;
  // }

  // message GetGroupChatsResponse {
  //     string user_id = 1;
  //     repeated string chat_ids = 2;
  // }

  // message AddUserToGroupChatRequest {
  //     string creator_id = 1;
  //     string user_id = 2;
  // }

  // message RemoveUserFromGroupChatRequest {
  //     string creator_id = 1;
  //     string user_id = 2;
  // }

  // message SendMessageToIndiviualChatRequest {
  //     string chat_id = 1;
  //     string author_id = 2;
  //     string message = 3;
  // }

  // message SendMessageToIndiviualChatResponse {
  //     string message_id = 1;
  //     string chat_id = 2;
  //     string author_id = 3;
  //     string message = 4;
  // }

  // message SendMessageToGroupChatRequest {
  //     string chat_id = 1;
  //     string author_id = 2;
  //     string message = 3;
  // }

  // message SendMessageToGroupChatResponse {
  //     string message_id = 1;
  //     string chat_id = 2;
  //     string author_id = 3;
  //     string message = 4;
  // }

  // message GetFriendsListRequest {
  //     string user_id = 1;
  // }

  // message GetFriendsListResponse {
  //     string user_id = 1;
  //     repeated Friend friends = 2;
  // }

  // message SearchUserRequest {
  //     string user_name = 1;
  // }

  // message SearchUserResponse {
  //     string user_id = 1;
  //     string user_name = 2;
  // }

  // message AddFriendRequest {
  //     string user_id = 1;
  //     string friend_id = 2;
  // }

  // message RemoveFriendRequest {
  //     string user_id = 1;
  //     string friend_id = 2;
  // }

  // message StreamChatRequest {
  //     string chat_id = 1;
  // }

  // message StreamChatResponse {
  //     repeated Message messages = 1;
  // }

  // message GetAllRequest {
  //     string user_id = 1;
  // }

  // message GetAllResponse {
  //     string user_id = 1;
  //     repeated Friend friends = 2;
  //     repeated string indivual_chat_ids = 3;
  //     repeated string group_chat_ids = 4;
  // }

  service GopherChatter {
    rpc Authenticate(AuthenticateRequest) returns (AuthenticateResponse);

    rpc CreateUser(CreateUserRequest) returns (google.protobuf.Empty);

    //     rpc DeleteUser(DeleteUserRequest) returns (google.protobuf.Empty);

    //     rpc CreateIndividualChat(CreateIndividualChatRequest) returns
    //     (CreateIndividualChatResponse);

    //     rpc LeaveIndividualChat(LeaveIndividualChatRequest) returns
    //     (google.protobuf.Empty);

    rpc CreateGroupChat(CreateGroupChatRequest) returns (CreateGroupChatResponse);

    //     rpc LeaveGroupChat(LeaveGroupChatRequest) returns
    //     (google.protobuf.Empty);

    //     rpc DeleteGroupChat(DeleteGroupChatRequest) returns
    //     (google.protobuf.Empty);

    //     rpc AddUserToGroupChat(AddUserToGroupChatRequest) returns
    //     (google.protobuf.Empty);

    //     rpc RemoveUserFromGroupChat(RemoveUserFromGroupChatRequest) returns
    //     (google.protobuf.Empty);

    //     rpc SendMessageToIndiviualChat(SendMessageToIndiviualChatRequest)
    //     returns (SendMessageToIndiviualChatResponse);

    //     rpc SendMessageToGroupChat(SendMessageToGroupChatRequest) returns
    //     (SendMessageToGroupChatResponse);

    //     rpc GetFriendsList(GetFriendsListRequest) returns
    //     (GetFriendsListResponse);

    //     rpc SearchUser(SearchUserRequest) returns (SearchUserResponse);

    //     rpc AddFriend(AddFriendRequest) returns (google.protobuf.Empty);

    //     rpc RemoveFriend(RemoveFriendRequest) returns
    //     (google.protobuf.Empty);

    //     rpc StreamChat(StreamChatRequest) returns (stream
    //     StreamChatResponse);

    //     rpc GetAll(GetAllRequest) returns (GetAllResponse);
  }